# aging_fish

./: 404.html  Dockerfile  README.md  index.html  mkdocs.common.yml  mkdocs.en.yml  mkdocs.yml  mkdocs.zhtw.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
docs/en/: index.md
docs/zh-TW/: index.md
en/: 404.html  index.html  sitemap.xml
en/foundations_what_is_aging_fish/: index.html
en/foundations_what_is_aging_fish/P_1/: index.html
en/search/: search_index.json
foundations_what_is_aging_fish/: index.html
foundations_what_is_aging_fish/P_1/: index.html
note/: A Complete Guide to Aging Fish.md  從魚身到餐桌：熟成魚的美味旅程.md
ref/海洋大學食品科學系/: Ref.txt
ref/高雄大學郭建民老師實驗室/: Ref.txt
search/: search_index.json
web/: mkdocs.yml
web/docs/: code-example.md
zh-TW/: 404.html  index.html  sitemap.xml
zh-TW/01_foundations_what_is_aging_fish/: index.html
zh-TW/01_foundations_what_is_aging_fish/01_definition_and_origins_of_aged_fish/: index.html
zh-TW/01_foundations_what_is_aging_fish/02_why_is_aged_fish_popular/: index.html
zh-TW/02_the_science_what_happens_after_a_fish_dies/: index.html
zh-TW/02_the_science_what_happens_after_a_fish_dies/01_the_three_stages_post-mortem/: index.html
zh-TW/02_the_science_what_happens_after_a_fish_dies/02_harness_the_changes_of_fish_aging/: index.html
zh-TW/03_practice_how_to_age_fish/: index.html
zh-TW/04_flavor_the_secrets_behind_the_taste_of_aged_fish/: index.html
zh-TW/foundations_what_is_aging_fish/: index.html
zh-TW/foundations_what_is_aging_fish/P_1/: index.html
zh-TW/search/: search_index.json
(+31 files in other folders)
