[tool.poetry]
name = "aging-fish"
version = "0.1.0"
description = ""
authors = ["David <djsy1414@gmail.com>"]
readme = "README.md"
packages = [{include = "aging_fish"}]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.47"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
